--- a/public/courses/stat230/week8/index.html
+++ b/public/courses/stat230/week8/index.html
@@ -60,7 +60,8 @@
   
     
   
-  <meta name="description" content="Day 21 Slides (pdf/html)" />
+  <meta name="description" content="Day 21 Slides (pdf/html)
+Day 22 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat230/week8/" />
@@ -304,7 +305,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat230/week8/" />
   <meta property="og:title" content="Week 8 | Deepak Bastola" />
-  <meta property="og:description" content="Day 21 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 21 Slides (pdf/html)
+Day 22 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -807,6 +809,7 @@
 
           <div class="article-style">
             <p>Day 21 Slides (<a href="/stat230/lecture_notes/Day21.pdf" target="_blank">pdf</a>/<a href="/stat230/lecture_notes/Day21.html" target="_blank">html</a>)</p>
+<p>Day 22 Slides (<a href="/stat230/lecture_notes/Day22.pdf" target="_blank">pdf</a>/<a href="/stat230/lecture_notes/Day22.html" target="_blank">html</a>)</p>
 
           </div>
 
