--- a/static/stat230/lecture_notes/Day22.html
+++ b/static/stat230/lecture_notes/Day22.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Logistic regression for binary responses: Diagnostics</title>
+    <title>Logistic regression for binomial response</title>
     <meta charset="utf-8" />
     <meta name="author" content="Bastola" />
     <script src="libs/header-attrs/header-attrs.js"></script>
@@ -41,7 +41,7 @@ layout: true
 
 class: title-slide, middle
 
-# .fancy[Logistic regression for binary responses: Diagnostics]
+# .fancy[Logistic regression for binomial response]
 
 ### .fancy[Stat 230]
 
@@ -1073,7 +1073,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_628511e9" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62851419" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
