--- a/static/stat230/lecture_notes/Day25.html
+++ b/static/stat230/lecture_notes/Day25.html
@@ -124,7 +124,7 @@ Deviance residuals are .bold[each case's] contribution to the residual deviance:
 \operatorname{Dres}_{i}=\operatorname{sign}\left(y_{i}-\hat{\mu}\left(X_{i}\right)\right) \sqrt{2\left[y_{i} \ln \left(\frac{y_{i}}{\hat{\mu}\left(X_{i}\right)}\right)-\left(y_{i}-\hat{\mu}\left(X_{i}\right)\right)\right]}
 \end{align*}`
 
-- `resid(my_glm, type `\(=\)` "deviance")`
+- `resid(my_glm, type = "deviance")`
 - `augment(my_glm, type.residuals = "deviance")`
 
 ]
@@ -198,13 +198,13 @@ summary(possums_aug$.fitted)
 
 ## Australian Possums
 
-&lt;img src="Day25_files/figure-html/unnamed-chunk-5-1.svg" width="60%" style="display: block; margin: auto;" /&gt;
+&lt;img src="Day25_files/figure-html/unnamed-chunk-5-1.svg" width="55%" style="display: block; margin: auto;" /&gt;
 
 .blockquote.font90[
 Why the "line" pattern?
-- Looks "null" enough (the lines are due to the discrete count nature of the data- these cases share the same response but have different bark values)
+- Looks "null" enough (the lines are due to the discrete count nature of the data
+- these cases share the same response but have different bark values)
 ]
-
 
 ---
 
@@ -280,7 +280,7 @@ class: middle
 
 # Assessing Poisson model assumptions
 
-.out-t[When might your response count NOT follow a Poisson distribution?]
+.out-t[When might your response count .bold[NOT] follow a Poisson distribution?]
 
 .blockquote.font80[
 The events do NOT occur independently
@@ -293,7 +293,7 @@ The events do NOT occur independently
 &lt;br&gt;
 
 .blockquote.font80[
-Bad mean function
+.bold[Bad] mean function
 - Missing explanatory variables
 - Incorrect mean function form (missing transformations, interactions, etc)
 ]
@@ -397,7 +397,7 @@ class: middle
 
 .blockquote[
 What if we can't use a GOF test?
-- plot mean count vs. mean variance for similar (same) predictor values
+- plot .bold[mean count vs. mean variance] for similar (same) predictor values
 - Poisson model assumes mean and variance are the same value!
 ]
 
@@ -425,7 +425,7 @@ count: false
 
 ```r
 pos_byBark &lt;- possums %&gt;%
-*mutate(Bark_grp = ntile(Bark, n=12))
+*mutate(Bark_grp = ntile(Bark, n=20))
 ```
 ]
  
@@ -441,7 +441,7 @@ count: false
 
 ```r
 pos_byBark &lt;- possums %&gt;%
- mutate(Bark_grp = ntile(Bark, n=12)) %&gt;%
+ mutate(Bark_grp = ntile(Bark, n=20)) %&gt;%
 *group_by(Bark_grp)
 ```
 ]
@@ -458,7 +458,7 @@ count: false
 
 ```r
 pos_byBark &lt;- possums %&gt;%
- mutate(Bark_grp = ntile(Bark, n=12)) %&gt;%
+ mutate(Bark_grp = ntile(Bark, n=20)) %&gt;%
  group_by(Bark_grp) %&gt;%
 *summarize(meanY = mean(y), varY = var(y))
 ```
@@ -476,7 +476,7 @@ count: false
 
 ```r
 pos_byBark &lt;- possums %&gt;%
- mutate(Bark_grp = ntile(Bark, n=12)) %&gt;%
+ mutate(Bark_grp = ntile(Bark, n=20)) %&gt;%
  group_by(Bark_grp) %&gt;%
  summarize(meanY = mean(y), varY = var(y))
 
@@ -496,7 +496,7 @@ count: false
 
 ```r
 pos_byBark &lt;- possums %&gt;%
- mutate(Bark_grp = ntile(Bark, n=12)) %&gt;%
+ mutate(Bark_grp = ntile(Bark, n=20)) %&gt;%
  group_by(Bark_grp) %&gt;%
  summarize(meanY = mean(y), varY = var(y))
 
@@ -517,7 +517,7 @@ count: false
 
 ```r
 pos_byBark &lt;- possums %&gt;%
- mutate(Bark_grp = ntile(Bark, n=12)) %&gt;%
+ mutate(Bark_grp = ntile(Bark, n=20)) %&gt;%
  group_by(Bark_grp) %&gt;%
  summarize(meanY = mean(y), varY = var(y))
 
@@ -589,6 +589,8 @@ V\left(Y_{i} \mid x_{i}\right) &amp;=\psi \mu_{i}
 
 ---
 
+class: middle
+
 ## Estimating the dispersion parameter `\(\psi\)`
 
 .blockquote[
@@ -603,6 +605,8 @@ For a GLM, the dispersion parameter `\(\psi\)` ("psi") is estimated from the dev
 ]
 
 ---
+
+class: middle
 
 # Quasi-Poisson model
 
