--- a/public/courses/stat230/week9/index.html
+++ b/public/courses/stat230/week9/index.html
@@ -61,7 +61,8 @@
     
   
   <meta name="description" content="Day 24 Slides (pdf/html)
-Day 25 Slides (pdf/html)" />
+Day 25 Slides (pdf/html)
+Day 26 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat230/week9/" />
@@ -306,7 +307,8 @@ Day 25 Slides (pdf/html)" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat230/week9/" />
   <meta property="og:title" content="Week 9 | Deepak Bastola" />
   <meta property="og:description" content="Day 24 Slides (pdf/html)
-Day 25 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 25 Slides (pdf/html)
+Day 26 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -818,6 +820,7 @@ Day 25 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.n
           <div class="article-style">
             <p>Day 24 Slides (<a href="/stat230/lecture_notes/Day24.pdf" target="_blank">pdf</a>/<a href="/stat230/lecture_notes/Day24.html" target="_blank">html</a>)</p>
 <p>Day 25 Slides (<a href="/stat230/lecture_notes/Day25.pdf" target="_blank">pdf</a>/<a href="/stat230/lecture_notes/Day25.html" target="_blank">html</a>)</p>
+<p>Day 26 Slides (<a href="/stat230/lecture_notes/Day26.pdf" target="_blank">pdf</a>/<a href="/stat230/lecture_notes/Day26.html" target="_blank">html</a>)</p>
 
           </div>
 
