--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -878,7 +878,7 @@
 <li>Midterm Exams (45%)</li>
 <li>Final Project (20%)</li>
 </ol>
-<!-- <a href="/stat220/STAT_220_Syllabus_Fall22.pdf" target="_blank">VIEW THE SYLLABUS</a> -->
+<p><a href="/stat220/STAT_220_Syllabus_Fall22.pdf" target="_blank">VIEW THE SYLLABUS</a></p>
 <h2 id="meet-your-instructor">Meet your instructor</h2>
 <a href="/author/deepak-bastola/">Deepak Bastola</a>
 
