--- a/static/stat220/Day1.html
+++ b/static/stat220/Day1.html
@@ -158,7 +158,7 @@ class: clear
 
 # Gendered language in professor reviews
 
-.footnote[ Click [here](Gendered language in professor reviews) to go to the app]
+.footnote[ Click [here](http://benschmidt.org/profGender/) to go to the app]
 
 
 
@@ -391,7 +391,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_571cc607" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_91d78c7e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
