--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -844,6 +844,19 @@ Before Class Watch through a simple video on building a Shiny App below It would
 <h3 id="in-class">In Class</h3>
 <p>We will see demonstrations of simple Shiny App. We will also go over Midterm II practice problems.</p>
 <p>Day 18 Slides (<a href="/stat220/Day18.pdf" target="_blank">pdf</a>/<a href="/stat220/Day18.html" target="_blank">html</a>)</p>
+<p><span style="color:orange"><strong>Wednesday, 10/26</strong></span></p>
+<p>.red[MIDTERM II]</p>
+<p><span style="color:orange"><strong>Friday, 10/28</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Please go over the Shiny the tutorial from Monday and practice further using the resources provided there. Please also watch through a <a href="https://youtu.be/ak_NJCVrJXY" target="_blank" rel="noopener">video</a> on a simple demonstration of building a Shiny app below if you are still disoriented about how Shiny actually works.
+  </div>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ak_NJCVrJXY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3 id="in-class-1">In Class</h3>
+<p>We will again do some more hands-on activity to build Shiny apps. We will also see how to integrate interactive maps like <code>leaflet</code> in Shiny.</p>
+<!-- Day 20 Slides (<a href="/stat220/Day20.pdf" target="_blank">pdf</a>/<a href="/stat220/Day20.html" target="_blank">html</a>) -->
 
           </div>
 
