--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -856,7 +856,7 @@ Before Class Watch through a simple video on building a Shiny App below It would
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ak_NJCVrJXY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h3 id="in-class-1">In Class</h3>
 <p>We will again do some more hands-on activity to build Shiny apps. We will also see how to integrate interactive maps like <code>leaflet</code> in Shiny.</p>
-<!-- Day 20 Slides (<a href="/stat220/Day20.pdf" target="_blank">pdf</a>/<a href="/stat220/Day20.html" target="_blank">html</a>) -->
+<p>Day 20 Slides (<a href="/stat220/Day20.pdf" target="_blank">pdf</a>/<a href="/stat220/Day20.html" target="_blank">html</a>)</p>
 
           </div>
 
