--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -843,8 +843,17 @@ Before Class Please go over previous class activities on Shiny App Implementatio
     Please go over previous class activities on Shiny App Implementation. We will do a group activity on building our own Shiny app incorporating <code>leaflet</code> map in class. If we get time, we will go over extra examples of Shiny implementation. Please open an account on <a href="https://www.shinyapps.io/" target="_blank" rel="noopener">shinyapps.io</a> where we will host our app for the projects
   </div>
 </div>
+<p><span style="color:orange"><strong>Wednesday, 11/02</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Skim <a href="https://datasciencebook.ca/classification.html#k-nearest-neighbors-with-tidymodels" target="_blank" rel="noopener">sections 5.1-5.6 of Data Science: A First Introduction</a>
+  </div>
+</div>
+<h3 id="in-class">In Class</h3>
+<p>We will start basic classification and learn the basics of k-nearest-neighbors (kNN).</p>
 <!--
-Day 18 Slides (<a href="/stat220/Day18.pdf" target="_blank">pdf</a>/<a href="/stat220/Day18.html" target="_blank">html</a>)
+Day 22 Slides (<a href="/stat220/Day22.pdf" target="_blank">pdf</a>/<a href="/stat220/Day22.html" target="_blank">html</a>)
 -->
 
           </div>
