--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -847,7 +847,7 @@ Before Class Please go over previous class activities on Shiny App Implementatio
 <h3 id="before-class-1">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Skim <a href="https://datasciencebook.ca/classification.html#k-nearest-neighbors-with-tidymodels" target="_blank" rel="noopener">sections 5.1-5.6 of Data Science: A First Introduction</a>
+    Skim <a href="https://datasciencebook.ca/classification1.html#classification-with-k-nearest-neighbors" target="_blank" rel="noopener">sections 5.1-5.6 of Data Science: A First Introduction</a>
   </div>
 </div>
 <h3 id="in-class">In Class</h3>
