--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -864,8 +864,8 @@ Before Class Please go over previous class activities on Shiny App Implementatio
 <ul>
 <li>KNN Model accuracy</li>
 </ul>
-<p>Day 23 Slides (<a href="/stat220/Day23.pdf" target="_blank">pdf</a>/<a href="/stat220/Day23.html" target="_blank">html</a>)</p>
-
+<!--
+Day 23 Slides (<a href="/stat220/Day23.pdf" target="_blank">pdf</a>/<a href="/stat220/Day23.html" target="_blank">html</a>) --> 
           </div>
 
           
